deploy: b3f80320741e95ab9c5af4bad0e4dadc68bb96ba

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -76,7 +76,9 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="mischbares/logger/logger.html">mischbares.logger.logger</a></li>
+<ul><li><a href="mischbares/action/autolab_action.html">mischbares.action.autolab_action</a></li>
+<li><a href="mischbares/logger/logger.html">mischbares.logger.logger</a></li>
+<li><a href="mischbares/orchestrator/orchestrator.html">mischbares.orchestrator.orchestrator</a></li>
 <li><a href="mischbares/utils/orchestrator_utils.html">mischbares.utils.orchestrator_utils</a></li>
 <li><a href="mischbares/utils/utils.html">mischbares.utils.utils</a></li>
 </ul>
