--- a/genindex.html
+++ b/genindex.html
@@ -82,18 +82,27 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.applied_potential">applied_potential() (in module mischbares.action.autolab_action)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.utils.assemble_file_name">assemble_file_name() (in module mischbares.utils.utils)</a>
 </li>
@@ -103,7 +112,13 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.clear">clear() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.utils.create_dir">create_dir() (in module mischbares.utils.utils)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.current">current() (in module mischbares.action.autolab_action)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -111,11 +126,33 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.ReturnClass.data">data (mischbares.action.autolab_action.ReturnClass attribute)</a>
+</li>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.dict_address">dict_address() (in module mischbares.utils.orchestrator_utils)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.dict_address_set">dict_address_set() (in module mischbares.utils.orchestrator_utils)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.disconnect">disconnect() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.do_measurement">do_measurement() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment">Experiment (class in mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.finish">finish() (in module mischbares.orchestrator.orchestrator)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -123,11 +160,15 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.get_data">get_data() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
       <li><a href="mischbares.logger.html#mischbares.logger.logger.get_logger">get_logger() (in module mischbares.logger.logger)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.utils.get_nested_value">get_nested_value() (in module mischbares.utils.utils)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.get_status">get_status() (in module mischbares.orchestrator.orchestrator)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -137,6 +178,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.hdf5_group_to_dict">hdf5_group_to_dict() (in module mischbares.utils.orchestrator_utils)</a>
 </li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.health_check">health_check() (in module mischbares.action.autolab_action)</a>
+
+      <ul>
+        <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.health_check">(in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.highest_name">highest_name() (in module mischbares.utils.orchestrator_utils)</a>
@@ -148,6 +195,18 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.increment_name">increment_name() (in module mischbares.utils.orchestrator_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.infl">infl() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.kill">kill() (in module mischbares.orchestrator.orchestrator)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -163,6 +222,20 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.main">main() (in module mischbares.action.autolab_action)</a>
+
+      <ul>
+        <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.main">(in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      </ul></li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.measure">measure() (in module mischbares.action.autolab_action)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.measure_status">measure_status() (in module mischbares.action.autolab_action)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.memory">memory() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.meta">meta (mischbares.orchestrator.orchestrator.Experiment attribute)</a>
+</li>
       <li>
     mischbares
 
@@ -175,6 +248,13 @@
 
       <ul>
         <li><a href="mischbares.action.html#module-mischbares.action">module</a>
+</li>
+      </ul></li>
+      <li>
+    mischbares.action.autolab_action
+
+      <ul>
+        <li><a href="mischbares.action.html#module-mischbares.action.autolab_action">module</a>
 </li>
       </ul></li>
       <li>
@@ -227,12 +307,21 @@
 </li>
       </ul></li>
       <li>
+    mischbares.orchestrator.orchestrator
+
+      <ul>
+        <li><a href="mischbares.orchestrator.html#module-mischbares.orchestrator.orchestrator">module</a>
+</li>
+      </ul></li>
+      <li>
     mischbares.server
 
       <ul>
         <li><a href="mischbares.server.html#module-mischbares.server">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     mischbares.tests
 
@@ -240,8 +329,6 @@
         <li><a href="mischbares.tests.html#module-mischbares.tests">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     mischbares.utils
 
@@ -263,6 +350,20 @@
         <li><a href="mischbares.utils.html#module-mischbares.utils.utils">module</a>
 </li>
       </ul></li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.ReturnClass.model_config">model_config (mischbares.action.autolab_action.ReturnClass attribute)</a>
+
+      <ul>
+        <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.model_config">(mischbares.orchestrator.orchestrator.Experiment attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.ReturnClass.model_fields">model_fields (mischbares.action.autolab_action.ReturnClass attribute)</a>
+
+      <ul>
+        <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.model_fields">(mischbares.orchestrator.orchestrator.Experiment attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.modify">modify() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
       <li>
     module
 
@@ -270,6 +371,8 @@
         <li><a href="mischbares.html#module-mischbares">mischbares</a>
 </li>
         <li><a href="mischbares.action.html#module-mischbares.action">mischbares.action</a>
+</li>
+        <li><a href="mischbares.action.html#module-mischbares.action.autolab_action">mischbares.action.autolab_action</a>
 </li>
         <li><a href="mischbares.config.html#module-mischbares.config">mischbares.config</a>
 </li>
@@ -285,6 +388,8 @@
 </li>
         <li><a href="mischbares.orchestrator.html#module-mischbares.orchestrator">mischbares.orchestrator</a>
 </li>
+        <li><a href="mischbares.orchestrator.html#module-mischbares.orchestrator.orchestrator">mischbares.orchestrator.orchestrator</a>
+</li>
         <li><a href="mischbares.server.html#module-mischbares.server">mischbares.server</a>
 </li>
         <li><a href="mischbares.tests.html#module-mischbares.tests">mischbares.tests</a>
@@ -299,10 +404,32 @@
   </ul></td>
 </tr></table>
 
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.native_command_ordering">native_command_ordering() (mischbares.orchestrator.orchestrator.Experiment class method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.parameter_correspondence">parameter_correspondence() (mischbares.orchestrator.orchestrator.Experiment class method)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.ReturnClass.parameters">parameters (mischbares.action.autolab_action.ReturnClass attribute)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.params">params (mischbares.orchestrator.orchestrator.Experiment attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.paths_in_hdf5">paths_in_hdf5() (in module mischbares.utils.orchestrator_utils)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.pause">pause() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.potential">potential() (in module mischbares.action.autolab_action)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.process_native_command">process_native_command() (in module mischbares.orchestrator.orchestrator)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -310,7 +437,19 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.raise_exceptions">raise_exceptions() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.recursively_save_dict_contents_to_group">recursively_save_dict_contents_to_group() (in module mischbares.utils.orchestrator_utils)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.repeat">repeat() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.resume">resume() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.retrieve">retrieve() (in module mischbares.action.autolab_action)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.ReturnClass">ReturnClass (class in mischbares.action.autolab_action)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -322,11 +461,31 @@
 </li>
       <li><a href="mischbares.utils.html#mischbares.utils.orchestrator_utils.save_dict_to_hdf5">save_dict_to_hdf5() (in module mischbares.utils.orchestrator_utils)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.scheduler">scheduler() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.send_measurement">send_measurement() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
       <li><a href="mischbares.utils.html#mischbares.utils.utils.send_to_telegram">send_to_telegram() (in module mischbares.utils.utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.set_cell">set_cell() (in module mischbares.action.autolab_action)</a>
+</li>
+      <li><a href="mischbares.action.html#mischbares.action.autolab_action.set_current_range">set_current_range() (in module mischbares.action.autolab_action)</a>
+</li>
       <li><a href="mischbares.logger.html#mischbares.logger.logger.setup_applevel_logger">setup_applevel_logger() (in module mischbares.logger.logger)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.Experiment.soe">soe (mischbares.orchestrator.orchestrator.Experiment attribute)</a>
+</li>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.start">start() (in module mischbares.orchestrator.orchestrator)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mischbares.orchestrator.html#mischbares.orchestrator.orchestrator.wait">wait() (in module mischbares.orchestrator.orchestrator)</a>
 </li>
   </ul></td>
 </tr></table>
