deploy: 67504a76823f3f37527a9cd1ec5216a5746286a3

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -77,8 +77,13 @@
              
   <h1>All modules for which code is available</h1>
 <ul><li><a href="mischbares/action/autolab_action.html">mischbares.action.autolab_action</a></li>
+<li><a href="mischbares/driver/autolab_driver.html">mischbares.driver.autolab_driver</a></li>
 <li><a href="mischbares/logger/logger.html">mischbares.logger.logger</a></li>
 <li><a href="mischbares/orchestrator/orchestrator.html">mischbares.orchestrator.orchestrator</a></li>
+<li><a href="mischbares/server/autolab_server.html">mischbares.server.autolab_server</a></li>
+<li><a href="mischbares/tests/test_autolab_action.html">mischbares.tests.test_autolab_action</a></li>
+<li><a href="mischbares/tests/test_autolab_orchestrator.html">mischbares.tests.test_autolab_orchestrator</a></li>
+<li><a href="mischbares/tests/test_autolab_server.html">mischbares.tests.test_autolab_server</a></li>
 <li><a href="mischbares/utils/orchestrator_utils.html">mischbares.utils.orchestrator_utils</a></li>
 <li><a href="mischbares/utils/utils.html">mischbares.utils.utils</a></li>
 </ul>
